# momentum

./: .gitignore
.github/workflows/: api_langchain_pull_request.yaml  api_langchain_pull_request_merged.yaml  api_pull_request.yaml  api_pull_request_merged.yaml  demo_pull_request.yaml  demo_pull_request_merged.yaml  deploy_demo.yaml  infrastructure_pull_request.yaml  infrastructure_pull_request_merged.yaml  pull_request.yaml  (+3 more)
api/: .gitignore  Dockerfile  Taskfile.yml  agent.graphql  agent.resolvers.go  bookmark.graphql  bookmark.resolvers.go  ent.graphql  ent.resolvers.go  generate.go  generated.go  go.mod  go.sum  gqlgen.yml  message.graphql  message.resolvers.go  resolver.go  skaffold-values-local.yaml  skaffold.yaml  thread.graphql  thread.resolvers.go  user.graphql  user.resolvers.go
api-langchain/: .gitignore  Dockerfile  pyproject.toml  skaffold.yaml
api-langchain/api_langchain/: anthropicc.py  groqq.py  health.py  main.py  openaii.py  perplexity.py
api-langchain/chart/: Chart.yaml  values.yaml
api-langchain/chart/templates/: deployment.yaml
app-chart/: Chart.yaml  values.yaml
chart-cluster/: Chart.yaml  values.yaml
langchain/: README.md  pyproject.toml
ui/: .env  .env.development  .eslintrc.json  .gitignore  Dockerfile  README.md  TODO.txt  angular.json  codegen.ts  global.d.ts  instrumentation.ts  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  relay.config.json  schema.graphql  skaffold.yaml  tailwind.config.js
ui-bak/: .gitignore  package.json  relay.config.json  tailwind.config.js
(+370 files in other folders)
