[tool.poetry]
name = "api-langchain"
version = "0.1.0"
description = ""
authors = ["Zack Stevens <zack.st7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"
langchain-groq = "^0.1.5"
openai = "^1.33.0"
pyramid = "^2.0.2"
langchain-anthropic = "^0.1.15"
langchain-community = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
